<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar_add_repo"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:background="@color/purple_200"
        app:titleTextColor="@color/purple_500"
        android:textAlignment="center">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView

                android:id="@+id/details_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
            <TextView
                android:id="@+id/toolbartitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/details"
                android:gravity="center"
                app:layout_constraintLeft_toRightOf="@id/details_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/details_preview"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_preview_24"
                android:layout_marginRight="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                app:layout_constraintRight_toLeftOf="@id/details_preview"
                android:id="@+id/details_delete"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_delete_forever_24"
                android:layout_marginRight="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="10dp">
        <TextView
            android:id="@+id/tv_nameofrepo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_titledesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_nameofrepo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_titledesc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/BranchesButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/branches"/>
            <Button
                android:id="@+id/IssuesButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/issues"/>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBranch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            />
        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/button_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/rvIssues"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>




</LinearLayout>